# TelecomChatbot

./: .env.example  .gitignore  DEVELOPMENT.md  PLAN.md  README.md  projectPlan.md  pyproject.toml  run.sh  streamlit_app.py
project_resources/: retention_rules.json
project_resources/policy_documents/: billing.md
scripts/: run_scenarios.py
src/: __init__.py  config.py  data.py  graph.py  log_config.py  main.py  prompts.py  rag.py  state.py  tools.py  utils.py
tests/: __init__.py  test_tools.py
